@@ -12,8 +12,8 @@ public class Vampire extends Enemy {
     private int level;
     private int gold;
 
-    private static final List<Vampire> vampiresForBattleLvl1 = Arrays.asList( // total number is 1
-            new Vampire("VampireLvl1.5", 15, 1, 14)
+    private static final List<Vampire> vampiresForBattleLvl1 = List.of( // total number is 1
+            new Vampire("VampireLvl1.5", 15, 1, 19)
     );
     private static final List<Vampire> vampiresForBattleLvl2 = Arrays.asList( // total number is 4
             new Vampire("VampireLvl2.1", 20, 2, 20),
